plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org'
version = '0.0.1-SNAPSHOT'
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // MariaDB Driver
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.4'

    // H2 Database (for testing)
    runtimeOnly 'com.h2database:h2:2.2.220'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.28'
    annotationProcessor 'org.projectlombok:lombok:1.18.28'

    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Logging (Spring Boot 기본 로그백 사용)
    implementation 'org.slf4j:slf4j-api:2.0.7'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    //Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'

    //flask
    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
    implementation 'org.apache.httpcomponents:httpmime:4.5.13'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // RabbitMQ
    implementation 'org.springframework.boot:spring-boot-starter-amqp'

    // Redis (Lettuce client + Spring Cache abstraction)
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // Caffeine (L1 로컬 캐시 — Hot Key 방어)
    implementation 'com.github.ben-manes.caffeine:caffeine'

    // Jackson - Spring Boot manages versions (do NOT pin manually; causes JSR-310 mismatch)
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    // Resilience
    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(org.springframework.boot.gradle.tasks.bundling.BootJar) {
    archiveFileName = "aidiary-app.jar"
}
